# BaClasT

./: .gitignore  README.md  pyproject.toml  run.ipynb
baclast/: __init__.py  cli.py  eskape_classifier.py  model.pkl  model.py  utils.py  viz.py
docs/: manuscript.md  run.md  user_manual.md
genomes/: .gitignore  other_scope.json
phageWA/: ATCC_6538.fasta  KK1_genome.fasta
src/builder/: main.py  parser.py
src/classifier/: __init__.py  features.py
